- set letter-spacing to 1px as default - fix nowrap issue on safari

--- a/app/assets/less/app.less
+++ b/app/assets/less/app.less
@@ -10,7 +10,7 @@
 body {
   font-family: "Sukhumvit Set", "Thai Sans Neue", sans-serif;
   font-size: 18px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .app-container {
