--- a/app/scripts/components/articledisplay/articleDisplay.less
+++ b/app/scripts/components/articledisplay/articleDisplay.less
@@ -39,7 +39,6 @@
   }
   .wrapper {
     position: relative;
-    letter-spacing: 1px;
     img {
       width: 300px;
       height: 200px;
@@ -106,7 +105,7 @@
         .displayFlex(inline-flex);
         padding-right: 20px;
         > * {
-          padding-right: 20px; 
+          padding-right: 20px;
         }
         img {
           cursor: pointer;
