--- a/app/scripts/components/articleslist/articlesList.less
+++ b/app/scripts/components/articleslist/articlesList.less
@@ -27,11 +27,12 @@
         font-size: 22px;
         text-overflow: ellipsis;
         overflow: hidden;
-        white-space: nowrap;
+        > a {
+          white-space: nowrap;
+        }
       }
 
       .brief-text {
-        letter-spacing: 1px;
         text-overflow: ellipsis;
         overflow: hidden;
         display: -webkit-box;
