--- a/app/scripts/components/introslider/introSlider.less
+++ b/app/scripts/components/introslider/introSlider.less
@@ -98,7 +98,6 @@
               border-width: 0px;
               margin: 0px;
               padding: 0px;
-              letter-spacing: 1px;
               min-height: 0px;
               min-width: 0px;
               max-height: none;
