--- a/app/scripts/components/simpleheader/simpleHeader.less
+++ b/app/scripts/components/simpleheader/simpleHeader.less
@@ -23,6 +23,7 @@
 .simple-header {
   background-color: white;
   color: @red;
+  letter-spacing: 2px;
   a, a:visited, a:link, a:active {
     text-decoration: none;
     color: @red;
