--- a/app/scripts/components/sitemap/sitemap.less
+++ b/app/scripts/components/sitemap/sitemap.less
@@ -1,6 +1,5 @@
 .sitemap {
   color: white;
-  letter-spacing: 1px;
   .sitemap-content {
     min-height: 270px;
     padding-top: 20px;
